# matrix-cli-client

./: Cargo.toml  README.md
src/: app.rs  main.rs  matrix.rs  tui.rs  ui.rs
