[package]
name = "matrix-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
matrix-sdk = "0.4.1"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
tui = "0.17.0"
crossterm = "0.23.1"
unicode-width = "0.1.9"